fix ( all the data content )

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,15 @@ body {
   font-family: "Work Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1600px;
+  margin: auto;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* p {
+  font-size: 18px;
 }
