--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -31,7 +31,8 @@
   display: flex;
   font-size: 36px;
   font-weight: 800;
-  color: blueviolet;
+  color: blue;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 720px) {
