style ( changes in contact styling )

--- a/src/components/Body/Contact/contact.css
+++ b/src/components/Body/Contact/contact.css
@@ -1,3 +1,8 @@
+.contact_details {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
 .contact_social-icons img {
   width: 35px;
 }
@@ -8,20 +13,25 @@
   gap: 1.7rem;
 }
 
-.contact_details {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  align-items: center;
-}
-
 .contact_downloadresume {
   display: flex;
   align-items: center;
   gap: 0.4rem;
   cursor: pointer;
   text-decoration: none;
+  margin: 2rem 0;
 }
 
 .contact_downloadresume img {
   height: 30px;
+}
+
+@media screen and (max-width: 720px) {
+  .contact_details {
+    display: grid;
+    grid-template-columns: auto;
+  }
+  .contact_downloadresume {
+    justify-content: center;
+  }
 }
