--- a/src/components/Body/Projects/project-card.css
+++ b/src/components/Body/Projects/project-card.css
@@ -52,6 +52,10 @@
   margin-right: 6px;
 }
 
+.project_description {
+  font-size: 16px;
+}
+
 @media screen and (max-width: 720px) {
   .project-card {
     flex-direction: column-reverse;
