--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 12px;
+  margin: 1.5rem 3rem;
   position: relative;
   align-items: center;
 }
