sttyle (mobile responsive)

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -36,6 +36,9 @@
 }
 
 @media screen and (max-width: 720px) {
+  .header {
+    margin: 1.5rem 0.5rem;
+  }
   .mobile-menu {
     display: flex;
   }
